fix catalog wrapping

--- a/app/assets/stylesheets/layout/_layout.sass
+++ b/app/assets/stylesheets/layout/_layout.sass
@@ -34,47 +34,6 @@ body
   position: fixed
   z-index: 1950
 
-/**
- *  HOME PAGE
- *-----------------------------------------
-
-#app[data-view="application"]
-
-  // Positioning claim+login box
-  .ui-home-claim
-    +dimension(940px, 260px)
-    +position-top-right(50%, 50%)
-    +position-bottom-left(50%, 50%)
-    margin: -150px -490px
-    z-index: 50
-
-  // Adding some extra space above the footer
-  .app-body
-    padding: 0 0 120px 0
-
-  // Limiting home page's container to 980px
-  .app-body-ui-container
-    margin: 0 auto
-    position: relative
-    width: 980px
-    // Positioning tab navigation over the collage
-    .ui-header-menu
-      bottom: 100%
-    // Tweaking shadows of the tab-nav buttons
-    .ui-header-menu .ui-tabs-item
-      +box-shadow(0 -2px 2px $darken-more)
-    // Adjusting display of resources
-    .ui-resources-holder
-      margin: 0
-      padding: $space-m 0
-    .ui-resources
-      padding: 0
-    .ui-resource
-      margin-right: -$space-x
-    .ui-resource .media-catalog
-      margin-right: $space-s
-      // work-around .ui-resource's negative margin
-
 
 /**
  *  BOOTSTRAP STUFF (to revise later and see if still needed)
